
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* BOX ;
 int SIGINT ;
 int atoi (char*) ;
 int banner () ;
 int brute () ;
 int exit (int ) ;
 int host ;
 int loadwordlist (char*) ;
 int login (char*,char*) ;
 int printf (char*,char*) ;
 int resolve (char*) ;
 int sig ;
 int signal (int ,int ) ;
 int sock (int ,int) ;
 int strcmp (char*,char*) ;
 int usage (char*) ;

int main(int argc, char *argv[]) {

    int port;

    signal(SIGINT, sig);

    banner();
    if((argc<=3)||(argc>=8)) { usage(argv[0]); exit(0); }

    if(!strcmp(argv[2],"-u")) {
      if(argc==6) { port=atoi("23"); }
      else { port=atoi(argv[6]); }


      printf("%s\n",BOX);

      loadwordlist(argv[5]);
      resolve(argv[1]);
      sock(host, port);
      login(argv[3],argv[4]);
      brute();
    }

    else {
      if(argc==4) { port=atoi("23"); }
      else { port=atoi(argv[4]); }
      printf("%s\n",BOX);

      loadwordlist(argv[3]);
      resolve(argv[1]);
      sock(host, port);
      login("n0login",argv[2]);
      brute();
    }
}
